--- a/src/scss/frontend/drupal/drupal7/_drupal.scss
+++ b/src/scss/frontend/drupal/drupal7/_drupal.scss
@@ -1,503 +1,20 @@
-// Drupal 7
+// Drupal Modules
 //
-// Optional Drupal 7 component. Example styling below won't be accurate unless Drupal's stylesheets are added to the KSS config.
+// Style guide: frontend.drupal.drupal7.modules
+
+@import 'frontend/drupal/drupal7/modules/styleguide';
+@import 'frontend/drupal/drupal7/modules/panels';
+@import 'frontend/drupal/drupal7/modules/panels-in-place-editor';
+
+// Frontend Build Drupal Components
 //
-// Style guide: frontend.drupal.drupal7
-
-// scss-lint:disable QualifyingElement, MergeableSelector, IdSelector
-
-// Variables
+// Frontend Build optional components for default Drupal output.
 //
-// Drupal 7 component variables. To add/edit component variables, use <code>scss/_variables.scss</code>.
-//
-// $user-layout                        - If enabled, styles the user page layout within a container. Default: <code>true</code>
-// $form-item-margin-bottom            - Defines the form item bottom margin. Default: <code>1rem</code>
-// $form-item-margin-top               - Defines the form item top margin. Default: <code>1rem</code>
-// $message-margin                     - Defines the site message margin. Default: <code>rem-calc($global-margin 0)</code>
-// $message-padding                    - Defines the site message padding. Default: <code>1rem</code>
-// $message-border                     - Defines the site message radius. Default: <code>$global-radius</code>
-// $message-radius                     - Defines the site message border. Default: <code>rem-calc(1) solid</code>
-// $message-status-background          - Defines the status message background. Default: <code>rgba($success-color, .5)</code>
-// $message-status-border              - Defines the status message border. Default: <code>rem-calc(1) solid darken($success-color, 50%)</code>
-// $message-status-color               - Defines the status message color. Default: <code>darken($success-color, 50%)</code>
-// $message-warning-background         - Defines the warning message background. Default: <code>rgba($warning-color, .5)</code>
-// $message-warning-border             - Defines the warning message border. Default: <code>rem-calc(1) solid darken($warning-color, 50%)</code>
-// $message-warning-color              - Defines the warning message color. Default: <code>darken($warning-color, 50%)</code>
-// $message-error-background           - Defines the error message background. Default: <code>rgba($alert-color, .5)</code>
-// $message-error-border               - Defines the error message border. Default: <code>rem-calc(1) solid darken($alert-color, 50%)</code>
-// $message-error-color                - Defines the error message color. Default: <code>darken($alert-color, 50%)</code>
-// $progress-bar-background            - Defines the progress bar background. Default: <code>$medium-gray</code>
-// $progress-bar-border                - Defines the progress bar border. Default: <code>rem-calc(1) solid $medium-gray</code>
-// $progress-bar-percentage-float      - Defines the percentage text float. Default: <code>right</code>
-// $progress-bar-margin                - Defines the progress bar margin. Default: <code>rem-calc(0 0 $global-margin 0)</code>
-// $progress-bar-radius                - Defines the progress bar radius. Default: <code>rem-calc($progress-radius)</code>
-// $progress-filled-background         - Defines the progress filled background. Default: <code>$primary-color</code>
-// $progress-height                    - Defines the progress height. Default: <code>$progress-height</code>
-// $progress-weight                    - Defines the progress weight. Default: <code>$global-weight-bold</code>
-// $password-strength-margin           - Defines the password strength margin. Default: <code>0</code>
-// $password-strength-width            - Defines the password strength width. Default: <code>rem-calc(300)</code>
-// $password-indicator-background      - Defines the password strength indicator background. Default: <code>$medium-gray</code>
-// $password-indicator-fill-background - Defines the password strength indicator fill background. Default: <code>$primary-color</code>
-// $password-indicator-height          - Defines the password strength indicator height. Default: <code>rem-calc(39)</code>
-// $password-strength-title-margin     - Defines the password strength indicator height. Default: <code>rem-calc(0 0 1 0)</code>
-// $password-indicator-radius          - Defines the password strength indicator radius. Default: <code>$global-radius</code>
-// $password-strength-title-size       - Defines the password strength title font size. Default: <code>$form-label-font-size</code>
-//
-// Weight: 0
-//
-// Style guide: frontend.drupal.drupal7.variables
+// Style guide: frontend.drupal.drupal7.components
 
-// Layouts
-$user-layout: true                                                     !default;
-
-// Forms
-$form-item-margin-bottom: 1rem                                         !default;
-$form-item-margin-top:    1rem                                         !default;
-
-// Messages
-$message-margin:  1rem 0                                               !default;
-$message-padding: 1rem                                                 !default;
-$message-border:  rem-calc(1) solid                                    !default;
-$message-radius:  0                                                    !default;
-
-// Status
-$message-status-background: rgba($success-color, .5)                   !default;
-$message-status-border:     rem-calc(1) solid darken($success-color, 30%) !default;
-$message-status-color:      darken($success-color, 50%)                !default;
-
-// Warning
-$message-warning-background: rgba($warning-color, .5)                  !default;
-$message-warning-border:     rem-calc(1) solid darken($warning-color, 30%) !default;
-$message-warning-color:      darken($warning-color, 50%)               !default;
-
-// Error
-$message-error-background: rgba($alert-color, .5)                      !default;
-$message-error-border:     rem-calc(1) solid darken($alert-color, 30%) !default;
-$message-error-color:      darken($alert-color, 50%)                   !default;
-
-// Progress bar
-$progress-bar-background:            $medium-gray                      !default;
-$progress-bar-border:                rem-calc(1) solid $medium-gray    !default;
-$progress-bar-percentage-float:      right                             !default;
-$progress-bar-message-margin:        rem-calc(0 0 $global-margin 0)    !default;
-$progress-margin-bottom:             $progress-margin-bottom           !default;
-$progress-bar-radius:                rem-calc($progress-radius)        !default;
-$progress-filled-background:         $primary-color                    !default;
-$progress-height:                    $progress-height                  !default;
-$progress-weight:                    $global-weight-bold               !default;
-
-// Password strength
-$password-strength-margin:           0                                 !default;
-$password-strength-width:            rem-calc(300)                     !default;
-$password-indicator-background:      $medium-gray                      !default;
-$password-indicator-fill-background: $primary-color                    !default;
-$password-indicator-height:          rem-calc(39)                      !default;
-$password-strength-title-margin:     rem-calc(0 0 1 0)                 !default;
-$password-indicator-radius:          $global-radius                    !default;
-$password-strength-title-size:       $form-label-font-size             !default;
-
-// scss-lint:disable NestingDepth
-
-@if $user-layout == true {
-  body.page-user.not-logged-in {
-    #main {
-      @extend %container;
-    }
-  }
-}
-
-// Lists
-//
-// Styles Drupal's default lists.
-//
-// Markup:
-// <ul>
-//   <li class="collapsed">Item 1</li>
-//   <li class="expanded">Item 2</li>
-//   <li class="leaf">Item 3
-//     <ul class="menu">
-//       <li>Subitem 1</li>
-//       <li>Subitem 2</li>
-//       <li>Subitem 3</li>
-//     </ul>
-//   </li>
-// </ul>
-//
-// Weight: 1
-//
-// Style guide: frontend.drupal.drupal7.lists
-ul {
-  li {
-    &.collapsed,
-    &.expanded,
-    &.leaf {
-      list-style-image: none;
-      list-style-type: none;
-    }
-  }
-
-  &.menu {
-    li {
-      margin: 0;
-    }
-  }
-}
-
-li.expanded,
-li.collapsed,
-li.leaf {
-  margin: 0;
-  padding: 0;
-}
-
-// System Menus
-//
-// Styles Drupal's default system menus.
-//
-// Markup:
-// <ul class="primary">
-//   <li><a href="#">Link 1</a></li>
-//   <li class="active"><a href="#" class="active">Link 2</a></li>
-//   <li><a href="#">Link 3</a></li>
-// </ul>
-//
-// Weight: 2
-//
-// Style guide: frontend.drupal.drupal7.system-menus
-ul {
-  &.primary {
-    border-bottom: 1px solid $medium-gray;
-    margin: rem-calc(0 0 $global-margin 0);
-    padding: 0;
-
-    &::after {
-      clear: both;
-      content: '';
-      display: table;
-    }
-
-    li {
-      display: inline-block;
-      float: left;
-      position: relative;
-
-      a {
-        background: $white;
-        border: 1px solid transparent;
-        border-bottom: 0;
-        border-top: 2px solid transparent;
-        color: $medium-gray;
-        display: block;
-        font-weight: $global-weight-bold;
-        margin-right: 0;
-        padding: .9em 1.6em;
-        transition: color .3s, border .3s;
-
-        &:hover {
-          background-color: $white;
-          border-color: transparent;
-          color: $dark-gray;
-        }
-      }
-
-      &.active {
-        bottom: -1px;
-
-        a {
-          border: 1px solid $medium-gray;
-          border-bottom: 0;
-          border-top: rem-calc(2) solid $primary-color;
-          color: $black;
-        }
-      }
-    }
-  }
-}
-
-// Message
-//
-// .messages - Default message styling.
-// .status   - Status styling.
-// .warning  - Warning styling.
-// .error    - Error styling.
-//
-// Markup:
-// <div class="messages {{modifier_class}}">
-//   Sed feugiat velit sed magna aliquam accumsan.
-// </div>
-//
-// Weight: 2
-//
-// Style guide: frontend.drupal.drupal7.message
-div {
-  &.messages {
-    background-position: 0% 0%;
-    background-repeat: repeat;
-    border: $message-border;
-    border-radius: $message-radius;
-    margin: $message-margin;
-    padding: $message-padding;
-  }
-
-  &.status {
-    background: $message-status-background;
-    border: $message-status-border;
-    color: $message-status-color;
-  }
-
-  &.warning {
-    background: $message-warning-background;
-    border: $message-warning-border;
-    color: $message-warning-color;
-  }
-
-  &.error {
-    background: $message-error-background;
-    border: $message-error-border;
-    color: $message-error-color;
-  }
-}
-
-.ok {
-  color: $message-status-color;
-}
-
-.warning {
-  color: $message-warning-color;
-}
-
-.error,
-.marker,
-.form-required {
-  color: $message-error-color;
-}
-
-table tr.ok {
-  background: $message-status-background;
-}
-
-table tr.warning {
-  background: $message-warning-background;
-}
-
-table tr.error {
-  background: $message-error-background;
-}
-
-// Progress Bar
-//
-// <b>There is a known conflict between <a href="http://foundation.zurb.com/sites/docs/progress-bar.html" target="_blank">Foundation's progress bar</a> class and Drupal's.</b> If using Drupal, it's recommended to comment out Foundation's progress bar component in <code>src/scss/framework/_framework.scss</code>.
-//
-// .progress - Default progress bar styling.
-//
-// Markup:
-// <div class="progress {{modifier_class}}">
-//   <div class="bar">
-//     <div class="filled" style="width: 57%"></div>
-//   </div>
-//   <div class="percentage">57%</div>
-//   <div class="message">Curabitur quis nunc nibh.</div>
-// </div>
-//
-// Weight: 3
-//
-// Style guide: frontend.drupal.drupal7.error-message
-.progress {
-  font-weight: $progress-weight;
-
-  .bar {
-    background: $progress-bar-background;
-    border: $progress-bar-border;
-    border-radius: $progress-bar-radius;
-    margin: 0 0 $progress-margin-bottom;
-  }
-
-  .filled {
-    background: $progress-filled-background;
-    border-radius: $progress-bar-radius;
-    height: $progress-height;
-  }
-
-  .percentage {
-    float: $progress-bar-percentage-float;
-  }
-
-  .message {
-    margin: $progress-bar-message-margin;
-  }
-}
-
-// Forms
-//
-// Styles Drupal's default form markup.
-//
-// Markup:
-// <div class="form-item">
-//   <label>Label</label>
-//   <input type="text" value="Mattis lacinia nam" size="60" maxlength="128" class="form-text">
-// </div>
-// <div class="form-item">
-//   <input type="checkbox" value="Convallis convallis lorem" class="form-checkbox">
-//   <label class="option">Convallis convallis lorem</label>
-// </div>
-// <div class="form-item">
-//   <input type="checkbox" class="form-checkbox">  <label class="option">Checkbox label</label>
-//   <div class="description">
-//     Form input description.
-//   </div>
-// </div>
-// <div class="form-item">
-//   <input type="radio" value="Convallis convallis lorem" class="form-radio">
-//   <label class="option">Convallis convallis lorem</label>
-// </div>
-// <div class="form-actions">
-//   <button type="button">Button</button>
-//   <input type="button" value="Button">
-//   <input type="submit" value="Submit" class="form-submit">
-//   <input type="reset" value="Reset">
-// </div>
-//
-// Weight: 4
-//
-// Style guide: frontend.drupal.drupal7.forms
-.description {
-  color: $dark-gray;
-  font-size: $small-font-size;
-}
-
-.form-item,
-.form-actions {
-  margin-bottom: $form-item-margin-bottom;
-  margin-top: $form-item-margin-top;
-}
-
-.form-item {
-  &:first-of-type {
-    margin-top: 0;
-  }
-}
-
-.form-actions {
-  button,
-  [type='button'],
-  [type='reset'],
-  [type='submit'] {
-    margin-bottom: 0;
-  }
-
-  .form-submit {
-    margin-right: $global-margin;
-  }
-}
-
-input {
-  &.form-checkbox,
-  &.form-radio {
-    vertical-align: baseline;
-  }
-}
-
-.form-type-radio .description,
-.form-type-checkbox .description {
-  margin-left: rem-calc(26);
-}
-
-.content-type-button {
-  img {
-    vertical-align: unset;
-  }
-}
-
-// Form Submit
-//
-// .form-submit - Styles all Drupal submit buttons.
-//
-// Markup:
-// <input type="button" class="form-submit" value="Submit" />
-//
-// Weight: 5
-//
-// Style guide: frontend.drupal.drupal7.form-submit
-.form-submit {
-  @include button;
-}
-
-// Password Strength
-//
-// .password-strength - Styles the Drupal password strength components.
-//
-// Markup:
-// <div class="password-strength">
-//   <div class="password-strength-text">Weak</div>
-//   <div class="password-strength-title">Password strength:</div>
-//   <div class="password-indicator">
-//     <div class="indicator" style="width: 15%;"></div>
-//   </div>
-// </div>
-//
-// Weight: 6
-//
-// Style guide: frontend.drupal.drupal7.password-strength
-.password-strength {
-  margin-top: $password-strength-margin;
-  width: $password-strength-width;
-}
-
-.password-strength-title {
-  display: inline-block;
-  font-size: $password-strength-title-size;
-  margin: $password-strength-title-margin;
-}
-
-.password-indicator {
-  background: $password-indicator-background;
-  border-radius: $password-indicator-radius;
-  height: $password-indicator-height;
-  overflow: hidden;
-
-  div {
-    background: $password-indicator-fill-background;
-    border-radius: $password-indicator-radius;
-  }
-}
-
-// Search Results
-//
-// .search-results - Styles Drupal default search result listings.
-//
-// Weight: 6
-//
-// Style guide: frontend.drupal.drupal7.search-results
-.search-results {
-  margin-left: 0;
-
-  .search-snippet-info {
-    padding-left: 0;
-  }
-}
-
-// Pager
-//
-// .pager - Styles Drupal's default pager.
-//
-// Weight: 7
-//
-// Style guide: frontend.drupal.drupal7.pager
-.pager {
-  @include pagination-container;
-}
-
-// Admin Menu
-//
-// #admin-menu - Styles the Drupal admin menu component.
-//
-// Weight: 8
-//
-// Style guide: frontend.drupal.drupal7.admin-menu
-#admin-menu {
-  display: none;
-
-  @include breakpoint(medium) {
-    display: block;
-  }
-}
+@import 'frontend/drupal/drupal7/components/admin-menu';
+@import 'frontend/drupal/drupal7/components/modal';
+@import 'frontend/drupal/drupal7/components/messages';
+@import 'frontend/drupal/drupal7/components/search-results';
+@import 'frontend/drupal/drupal7/components/pager';
+@import 'frontend/drupal/drupal7/components/tabs';
