--- a/src/scss/frontend/drupal/drupal7/modules/_panels-in-place-editor.scss
+++ b/src/scss/frontend/drupal/drupal7/modules/_panels-in-place-editor.scss
@@ -1,170 +1,99 @@
 // Panels In-Place Editor
 //
-// Contains default <a href="https://www.drupal.org/project/panels" target="_blank">Panels In-Place Editor module</a> styles. To add/edit component variables, use <code>scss/_variables.scss</code>.
+// Contains default <a href="https://www.drupal.org/project/panels" target="_blank">Panels In-Place Editor module</a> styles.
 //
-// $control-container-height        - Sticky control container height. Default: <code>$black</code>
-// $control-container-background    - Sticky control container background. Default: <code>$black</code>
-// $control-container-shadow        - Sticky control container box shadow. Default: <code>none</code>
-// $control-container-padding       - Sticky control container padding. Default: <code>rem-calc(10 0)</code>
-// $control-button-background       - Sticky control button background. Default: <code>$button-background</code>
-// $control-button-background-hover - Sticky control button hover background. Default: <code>$button-background-hover</code>
-// $control-button-color            - Sticky control button color. Default: <code>$button-color</code>
-// $control-button-color-hover      - Sticky control button hover color. Default: <code>$button-color-hover</code>
-// $control-button-font-family      - Sticky control button font family. Default: <code>$button-font-family</code>
-// $control-button-padding          - Sticky control button padding. Default: <code>$button-padding</code>
-// $control-button-size             - Sticky control button font sizes. Default: <code>map-get($button-sizes, small)</code>
-// $control-button-weight           - Sticky control button weight. Default: <code>$global-weight-bold</code>
+// Style guide: frontend.drupal.drupal7.modules.panels-in-place-editor
+
+// Variables
 //
-// Style guide: frontend.drupal.modules.panels-in-place-editor
-
-$control-container-height:        rem-calc(53);
-$control-container-background:    $black;
-$control-container-shadow:        none;
-$control-container-padding:       rem-calc(10 0);
-$control-button-background:       $button-background;
-$control-button-color:            $button-color;
-$control-button-color-hover:      $button-color-hover;
-$control-button-radius:           $button-radius;
-$control-button-background-hover: $button-background-hover;
-$control-button-font-family:      $button-font-family;
-$control-button-padding:          $button-padding;
-$control-button-size:             map-get($button-sizes, small);
-$control-button-weight:           $button-weight;
-
-// scss-lint:disable QualifyingElement, NestingDepth, IdSelector
-
-body {
-  &.panels-ip {
-    margin-bottom: $control-container-height;
-  }
-}
+// Panels In-Place Editor component variables. To add/edit component variables, use <code>scss/_variables.scss</code>.
+//
+// $ipe-control-container-background - Background for the IPE control container. Default: <code>#000</code>
+// $ipe-control-container-padding - Padding for the IPE control container. Default: <code>1rem</code>
+// $ipe-control-container-shadow - Shadow for the IPE control container. Default: <code>none</code>
+// $ipe-button-background - Button background for IPE. Default: <code>#1779ba</code>
+// $ipe-button-background-hover - Button hover background for IPE. Default: <code>#767676</code>
+// $ipe-button-radius - Button radius for IPE. Default: <code>0</code>
+// $ipe-button-color - Button color for IPE. Default: <code>#fff</code>
+// $ipe-button-color-hover - Button hover color for IPE. Default: <code>#fff</code>
+// $ipe-button-padding - Button padding for IPE. Default: <code>.5em</code>
+// $ipe-button-font-family - Button font family for IPE. Default: <code>inherit</code>
+// $ipe-button-font-size - Button font size for IPE. Default: <code>inherit</code>
+// $ipe-button-line-height - Button line height for IPE. Default: <code>1</code>
+// $ipe-button-height - Button height for IPE. Default: <code>33px</code>
+// $ipe-button-margin - Button margin for IPE. Default: <code>0 1rem</code>
+// $ipe-button-weight - Button weight for IPE. Default: <code>normal</code>
+//
+// Style guide: frontend.drupal.drupal7.modules.panels-in-place-editor.variables
+$ipe-control-container-background: #000                                !default;
+$ipe-control-container-padding:    1rem                                !default;
+$ipe-control-container-shadow:     none                                !default;
+$ipe-button-background:            #1779ba                             !default;
+$ipe-button-background-hover:      #767676                             !default;
+$ipe-button-radius:                0                                   !default;
+$ipe-button-color:                 #fff                                !default;
+$ipe-button-color-hover:           #fff                                !default;
+$ipe-button-padding:               .5em                                !default;
+$ipe-button-font-family:           inherit                             !default;
+$ipe-button-font-size:             inherit                             !default;
+$ipe-button-line-height:           1                                   !default;
+$ipe-button-height:                33px                                !default;
+$ipe-button-margin:                0 1rem                              !default;
+$ipe-button-weight:                normal                              !default;
 
 div {
   &#panels-ipe-control-container {
-    background-color: $black;
-    box-shadow: $control-container-shadow;
-    padding: $control-container-padding;
+    background: $ipe-control-container-background;
+    box-shadow: $ipe-control-container-shadow;
+    left: 0;
+    padding: $ipe-control-container-padding;
   }
 
   &.panels-ipe-button-container {
     margin: 0;
   }
 
-  &.panels-ipe-pseudobutton-container,
-  &.panels-ipe-control .form-submit {
-    background: $control-button-background;
-    border-radius: $control-button-radius;
-    color: $control-button-color;
-    font-family: $control-button-font-family;
-    font-size: $control-button-size;
-    font-weight: $control-button-weight;
-    height: rem-calc(33);
-    line-height: 1.2;
-    padding: $control-button-padding;
-
-    &:hover,
-    &:focus {
-      background: $control-button-background-hover;
-    }
-
-    a {
-      color: $control-button-color;
-      height: auto;
-      padding: 0;
-
-      &:hover {
-        color: $control-button-color-hover;
-      }
-    }
-  }
-
   &.panels-ipe-pseudobutton-container {
     a {
-      &.panels-ipe-startedit,
-      &.panels-ipe-change-layout {
-        background: transparent;
-        padding-left: 0;
-      }
-    }
-  }
-
-  &.panels-ipe-placeholder {
-    background: rgba($primary-color, .3);
-    border: 0;
-    color: $black;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: $global-lineheight;
-    margin: 0;
-    padding: rem-calc(10);
-
-    h3 {
-      color: $primary-color;
-      font-size: precent-size(12, 12);
-      font-weight: $global-weight-bold;
-      margin: 0;
-      width: auto;
-    }
-  }
-
-  &.panels-ipe-newblock {
-    box-shadow: none;
-    margin: 0;
-    right: rem-calc(10);
-    transform: translateY(-50%);
-  }
-
-  &.panels-ipe-draghandle {
-    position: relative;
-  }
-
-  &.panels-ipe-handlebar-wrapper {
-    border: 0;
-  }
-}
-
-div.panels-ipe-handlebar-wrapper li a,
-div.panels-ipe-dragtitle span,
-div.panels-ipe-newblock a,
-span.panels-ipe-draghandle-icon {
-  background-color: $primary-color;
-  box-shadow: none;
-}
-
-.ipe-throbber {
-  @include throbber;
-}
-
-.panels-ipe-dragbar-admin-title {
-  display: inline-block;
-  font-weight: $global-weight-bold;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
-
-.panels-ipe-editing {
-  div {
-    &.panels-ipe-portlet-wrapper {
-      border: rem-calc(2) solid transparent;
-      margin-top: 0;
-      transition: border-color .3s;
+      color: $ipe-button-color;
+      padding: $ipe-button-padding;
 
       &:hover {
-        border: rem-calc(2) dashed $medium-gray;
+        color: $ipe-button-color-hover;
+      }
+
+      &.panels-ipe-startedit,
+      &.panels-ipe-change-layout {
+        padding: $ipe-button-padding;
+        background-image: none;
       }
     }
   }
 
-  .panels-ipe-region {
-    border: 0;
+  &.panels-ipe-control {
+    .form-submit {
+      padding: $ipe-button-padding;
+    }
   }
 }
 
-div.panels-ipe-draghandle,
-div.panels-ipe-nodraghandle {
-  background: $primary-color;
-  color: $white;
-  padding: rem-calc(10);
+div.panels-ipe-pseudobutton-container,
+div.panels-ipe-control .form-submit {
+  background: $ipe-button-background;
+  border-radius: $ipe-button-radius;
+  color: $ipe-button-color;
+  font-family: $ipe-button-font-family;
+  font-size: $ipe-button-font-size;
+  font-weight: $ipe-button-weight;
+  height: $ipe-button-height;
+  line-height: $ipe-button-line-height;
+  margin: $ipe-button-margin;
+}
+
+div.panels-ipe-pseudobutton-container:hover,
+div.panels-ipe-control .form-submit:hover,
+div.panels-ipe-pseudobutton-container:focus,
+div.panels-ipe-control .form-submit:focus {
+  background: $ipe-button-background-hover;
+  color: $ipe-button-color-hover;
 }
